# Project-Poker

./: .gitignore  CMakeLists.txt  Card.cpp  Card.hpp  Comparator.cpp  Comparator.hpp  Deck.cpp  Deck.hpp  Game.cpp  Game.hpp  Helpers.hpp  Player.cpp  Player.hpp  README.md  Table.cpp  Table.hpp  Verifier.cpp  Verifier.hpp  main.cpp
tests/: CMakeLists.txt  CardTests.cpp  ComparatorTests.cpp  DeckTests.cpp  GameTests.cpp  PlayerTests.cpp  TableTests.cpp  VerifierTests.cpp
tests/mocks/: PlayerMock.hpp
